--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
 							<div class="widget">
 								<img src="images/demo2/ubicacion.png" class="img-fluid" alt="Gyim">
 								<div class="textwidget">
-									<div class="pbmit-contact-widget-line pbmit-contact-widget-address"><a href="https://goo.gl/maps/SDSZTfkZFNTZkT3SA" target="_blank" rel="noopener noreferrer"><BR>Berazategui. Argentina</BR></a></div>
+									<div class="pbmit-contact-widget-line pbmit-contact-widget-address"><a href="https://maps.app.goo.gl/4VNqeKUyQuib5EsM6" target="_blank" rel="noopener noreferrer"><BR>Berazategui. Argentina</BR></a></div>
 								</div>
 							</div>
 						</div>
@@ -860,8 +860,8 @@
 								<h2 class="widget-title">Horas Laborales</h2>
 								<div class="textwidget pbmit-timelist-wrapper">
 									<ul class="pbmit-timelist-list">
-										<li><span class="pbmit-timelist-li-title">Lu – Vi: 6.00 – 22.00</span></li>
-										<li><span class="pbmit-timelist-li-title">Sa – Do: 9.00 – 13.00</span></li>
+										<li><span class="pbmit-timelist-li-title">Lu – Vi: 8.00 – 21.00</span></li>
+										<li><span class="pbmit-timelist-li-title">Sabado: 9.00 – 11.00</span></li>
 									</ul> 
 								</div>
 							</div>
@@ -869,15 +869,14 @@
 						<div class="col-md-6 col-lg-3 widget-col-2">
 							<div class="widget">
 								<h2 class="widget-title">ESTAMOS AQUÍ</h2>
-								<div class="pbmit-contact-widget-line pbmit-contact-widget-address"><a href="https://goo.gl/maps/SDSZTfkZFNTZkT3SA" target="_blank" rel="noopener noreferrer">Calle 150, 2774. <BR>Villa España. Berazategui</BR></a></div>
+								<div class="pbmit-contact-widget-line pbmit-contact-widget-address"><a href="https://maps.app.goo.gl/4VNqeKUyQuib5EsM6" target="_blank" rel="noopener noreferrer">Calle 150, 2792. <BR>Villa España. Berazategui</BR></a></div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-3 widget-col-2">
 							<div class="widget">
 								<h2 class="widget-title">LLÁMANOS</h2>
 								<ul class="pbmit-timelist-list">
-									<li><span class="pbmit-timelist-li-title"><a href="tel:11-2345-6789">11 2345-6789</a></span></li>
-									<li><span class="pbmit-timelist-li-title"><a href="tel:11-2345-6789">11 2345-6789</a></span></li>
+									<li><span class="pbmit-timelist-li-title"><a href="tel:11-3202-8284">11 3202-8284</a></span></li>
 								</ul>
 							</div>
 						</div>
