Agregue Boton WSP

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </div><!-- End progress -->
 
       <div class="social-links">
+        <a href="https://wa.me/541132028284" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
         <a href="https://www.instagram.com/uppsala.ar/" class="uppsala" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="mailto:uppsala.gym@gmail.com" class="mail" target="_blank"><i class="bi bi-mailbox2"></i></a>
         <a href="https://www.instagram.com/descendantplanning/" class="descendant" target="_blank"><i class="bi bi-instagram"></i></a>
