Mejora en el SEO

--- a/descendant.html
+++ b/descendant.html
@@ -70,7 +70,7 @@
                      <div class="site-branding">
                         <h1 class="site-title">
                            <a href="index.html">
-                           <img class="logo-img" src="images/demo2/logo.png" alt="UPPSALA">
+                           <img class="logo-img" src="images/demo2/logo.png" alt="https://uppsala.ar/">
                            </a>
                         </h1>
                      </div>
@@ -157,7 +157,7 @@
                               <div class="pbmit-featured-wrapper">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/team/team-01.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/team/team-01.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="pbminfotech-social-box">
@@ -206,7 +206,7 @@
                               <div class="pbmit-featured-wrapper">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/team/team-02.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/team/team-02.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="pbminfotech-social-box">
@@ -255,7 +255,7 @@
                               <div class="pbmit-featured-wrapper">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/team/team-03.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/team/team-03.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="pbminfotech-social-box">
@@ -306,7 +306,7 @@
                               <div class="pbmit-featured-wrapper">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/team/team-04.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/team/team-04.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="pbminfotech-social-box">
@@ -355,7 +355,7 @@
                               <div class="pbmit-featured-wrapper">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/team/team-05.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/team/team-05.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="pbminfotech-social-box">
@@ -413,7 +413,7 @@
 					<div class="row">
 						<div class="col-md-12 col-xl-5">								
 							<div class="pbmit-footer-logo">
-								<img src="images/demo2/logo.png" class="img-fluid" alt="UPPSALA">
+								<img src="images/demo2/logo.png" class="img-fluid" alt="https://uppsala.ar/">
 							</div>                        
 						</div>	
 						<div class="col-xl-7 col-md-12 pbmit-footer-right">	
