--- a/index-1.html
+++ b/index-1.html
@@ -74,7 +74,7 @@
                               <div class="site-branding">
                                  <h1 class="site-title">
                                     <a href="index.html">
-                                       <img class="logo-img" src="images/demo2/logo.png" alt="UPPSALA">
+                                       <img class="logo-img" src="images/demo2/logo.png" alt="https://uppsala.ar/">
                                     </a>
                                  </h1>
                               </div>
@@ -124,7 +124,7 @@
                   <rs-module id="rev_slider_2_1" data-version="6.6.10">
                      <rs-slides style="overflow: hidden; position: absolute;">
                         <rs-slide style="position: absolute;" data-key="rs-1" data-title="Slide" data-thumb="revolution/images/slider-a-1-100x50.jpg" data-in="o:0;" data-out="a:false;">
-                           <img src="revolution/images/dummy.png" alt="" title="slider-b-1" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-1.jpg" data-no-retina>
+                           <img src="revolution/images/dummy.png" alt="https://uppsala.ar/" title="slider-b-1" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-1.jpg" data-no-retina>
       <!--
                            --><rs-layer
                               id="slider-1-slide-1-layer-0" 
@@ -175,7 +175,7 @@
                            </rs-layer><!--
       -->						</rs-slide>
                         <rs-slide style="position: absolute;" data-key="rs-4" data-title="Slide" data-thumb="revolution/images/slider-a-2-100x50.jpg" data-in="o:0;" data-out="a:false;">
-                           <img src="revolution/images/dummy.png" alt="" title="slider-b-2" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-2.jpg" data-no-retina>
+                           <img src="revolution/images/dummy.png" alt="https://uppsala.ar/" title="slider-b-2" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-2.jpg" data-no-retina>
       <!--
                            --><rs-layer
                               id="slider-1-slide-4-layer-0" 
@@ -226,7 +226,7 @@
                            </rs-layer><!--
       -->						</rs-slide>
                         <rs-slide style="position: absolute;" data-key="rs-5" data-title="Slide" data-thumb="revolution/images/slider-a-3-100x50.jpg" data-in="o:0;" data-out="a:false;">
-                           <img src="revolution/images/dummy.png" alt="" title="slider-b-3" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-3.jpg" data-no-retina>
+                           <img src="revolution/images/dummy.png" alt="https://uppsala.ar/" title="slider-b-3" width="1920" height="940" class="rev-slidebg tp-rs-img rs-lazyload" data-lazyload="revolution/images/slider-a-3.jpg" data-no-retina>
       <!--
                            --><rs-layer
                               id="slider-1-slide-5-layer-0" 
@@ -429,7 +429,7 @@
                               <div class="swiper-slide">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-01.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/project/project-img-01.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -437,7 +437,7 @@
                               <div class="swiper-slide">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-02.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/project/project-img-02.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -445,7 +445,7 @@
                               <div class="swiper-slide swiper-slide-prev">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-04.jpg" class="img-fluid" alt="">
+                                       <img src="images/demo2/project/project-img-04.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -643,12 +643,12 @@
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
                                              <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-01.jpg" class="img-fluid" alt="">
+                                                <img src="images/demo2/team/team-01.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                              </div>
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_one">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="">
+                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
                                  </div>
@@ -664,12 +664,12 @@
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
                                              <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-02.jpg" class="img-fluid" alt="">
+                                                <img src="images/demo2/team/team-02.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                              </div>
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_two">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="">
+                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
                                  </div>
@@ -685,12 +685,12 @@
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
                                              <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-03.jpg" class="img-fluid" alt="">
+                                                <img src="images/demo2/team/team-03.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                              </div>
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_three">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="">
+                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
                                  </div>
@@ -706,12 +706,12 @@
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
                                              <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-04.jpg" class="img-fluid" alt="">
+                                                <img src="images/demo2/team/team-04.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                              </div>
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_four">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="">
+                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
                                  </div>
@@ -727,12 +727,12 @@
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
                                              <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-05.jpg" class="img-fluid" alt="">
+                                                <img src="images/demo2/team/team-05.jpg" class="img-fluid" alt="https://uppsala.ar/">
                                              </div>
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_five">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="">
+                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
                                  </div>
@@ -840,7 +840,7 @@
 					<div class="row">
 						<div class="col-md-12 col-xl-5">								
 							<div class="pbmit-footer-logo">
-								<img src="images/demo2/logo.png" class="img-fluid" alt="UPPSALA">
+								<img src="images/demo2/logo.png" class="img-fluid" alt="https://uppsala.ar/">
 							</div>                        
 						</div>	
 						<div class="col-xl-7 col-md-12 pbmit-footer-right">	
