--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header">
     <div class="container">
 
-      <a href="https://uppsala.ar/" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="https://uppsala.ar/" class="mr-auto"><img src="assets/img/logo.png" alt="https://uppsala.ar/" class="img-fluid"></a>
       <h2 id="output">Muy pronto <span></span> <!--from Buenos Aires--></h2>
 
           <!-- ======= progress  ======= -->
