--- a/our-classes.html
+++ b/our-classes.html
@@ -70,7 +70,7 @@
 								<div class="site-branding">
 									<h1 class="site-title">
 										<a href="index.html">
-										<img class="logo-img" src="images/demo2/logo.png" alt="UPPSALA">
+										<img class="logo-img" src="images/demo2/logo.png" alt="https://uppsala.ar/">
 										</a>
 									</h1>
 								</div>
@@ -192,7 +192,7 @@
 					<div class="row">
 						<div class="col-md-12 col-xl-5">								
 							<div class="pbmit-footer-logo">
-								<img src="images/demo2/logo.png" class="img-fluid" alt="UPPSALA">
+								<img src="images/demo2/logo.png" class="img-fluid" alt="https://uppsala.ar/">
 							</div>                        
 						</div>	
 						<div class="col-xl-7 col-md-12 pbmit-footer-right">	
