[ADD] images in uppsala. [MOD] color background; vel marquee; integrantes descendant

--- a/descendant.html
+++ b/descendant.html
@@ -291,7 +291,7 @@
                                        <div class="pbminfotech-box-team-position">Entrenadora atlética</div>
                                     </div>
                                     <h3 class="pbmit-team-title">
-                                       <a href="team-member-details.html">ROCINREDES</a>
+                                       <a href="team-member-details.html">ROCHINREDES</a>
                                     </h3>
                                  </div>
                               </div>
