--- a/index-1.html
+++ b/index-1.html
@@ -30,29 +30,29 @@
       <!-- CSS
          ============================================ -->
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/bootstrap.min.css?ver=1.0.0">
       <!-- Fontawesome -->
-      <link rel="stylesheet" href="css/font-awesome.css">
+      <link rel="stylesheet" href="css/font-awesome.css?ver=1.0.0">
       <!-- Flaticon -->
-      <link rel="stylesheet" href="css/flaticon.css">
+      <link rel="stylesheet" href="css/flaticon.css?ver=1.0.0">
       <!-- optico Icons -->
-      <link rel="stylesheet" href="css/pbminfotech-base-icons.css">
+      <link rel="stylesheet" href="css/pbminfotech-base-icons.css?ver=1.0.0">
       <!-- Themify Icons -->
-      <link rel="stylesheet" href="css/themify-icons.css">
+      <link rel="stylesheet" href="css/themify-icons.css?ver=1.0.0">
       <!-- Slick -->
-      <link rel="stylesheet" href="css/swiper.min.css">
+      <link rel="stylesheet" href="css/swiper.min.css?ver=1.0.0">
       <!-- Magnific -->
-      <link rel="stylesheet" href="css/magnific-popup.css">
+      <link rel="stylesheet" href="css/magnific-popup.css?ver=1.0.0">
       <!-- AOS -->
-      <link rel="stylesheet" href="css/aos.css">
+      <link rel="stylesheet" href="css/aos.css?ver=1.0.0">
       <!-- Shortcode CSS -->
-      <link rel="stylesheet" href="css/shortcode.css">
+      <link rel="stylesheet" href="css/shortcode.css?ver=1.0.0">
       <!-- Base CSS -->
-      <link rel="stylesheet" href="css/base.css">
+      <link rel="stylesheet" href="css/base.css?ver=1.0.0">
       <!-- Style CSS -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/style.css?ver=1.0.0">
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="css/responsive.css?ver=1.0.0">
 
 
 
@@ -144,7 +144,7 @@
                               class="rs-layer pbmit-rev-btn rev-btn"
                               href="our-classes.html" target="_blank" rel="noopener"
                               data-type="button"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-rsp_ch="on"
                               data-xy="xo:500px,368px,256px,93px;yo:619px,471px,407px,324px;"
                               data-text="w:normal;s:13;l:55;ls:0.5px;fw:700;"
@@ -152,7 +152,7 @@
                               data-padding="r:35,29,22,14;l:35,29,22,14;"
                               data-frame_1="st:2290;sp:1000;"
                               data-frame_999="o:0;st:w;"
-                              data-frame_hover="c:#0c0920;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
+                              data-frame_hover="c:#000;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
                               style="z-index:8;background-color:#ffffff;font-family:'Orbitron';text-transform:uppercase;"
                            ><span>Empezar</span> 
                            </a><!--
@@ -160,7 +160,7 @@
                            --><rs-layer
                               id="slider-1-slide-1-layer-15" 
                               data-type="text"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-bsh="c:rgba(0,0,0,0.5);"
                               data-rsp_ch="on"
                               data-xy="xo:500px,367px,256px,35px;yo:368px,240px,214px,182px;"
@@ -195,7 +195,7 @@
                               class="rs-layer pbmit-rev-btn rev-btn"
                               href="our-classes.html" target="_blank" rel="noopener"
                               data-type="button"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-rsp_ch="on"
                               data-xy="xo:500px,368px,256px,93px;yo:619px,471px,407px,324px;"
                               data-text="w:normal;s:13;l:55;ls:0.5px;fw:700;"
@@ -203,7 +203,7 @@
                               data-padding="r:35,29,22,14;l:35,29,22,14;"
                               data-frame_1="st:2290;sp:1000;"
                               data-frame_999="o:0;st:w;"
-                              data-frame_hover="c:#0c0920;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
+                              data-frame_hover="c:#000;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
                               style="z-index:8;background-color:#ffffff;font-family:'Orbitron';text-transform:uppercase;"
                            ><span>Empezar</span> 
                            </a><!--
@@ -211,7 +211,7 @@
                            --><rs-layer
                               id="slider-1-slide-4-layer-15" 
                               data-type="text"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-bsh="c:rgba(0,0,0,0.5);"
                               data-rsp_ch="on"
                               data-xy="xo:500px,367px,256px,35px;yo:368px,240px,214px,182px;"
@@ -246,7 +246,7 @@
                               class="rs-layer pbmit-rev-btn rev-btn"
                               href="our-classes.html" target="_blank" rel="noopener"
                               data-type="button"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-rsp_ch="on"
                               data-xy="xo:500px,368px,256px,93px;yo:619px,471px,407px,324px;"
                               data-text="w:normal;s:13;l:55;ls:0.5px;fw:700;"
@@ -254,7 +254,7 @@
                               data-padding="r:35,29,22,14;l:35,29,22,14;"
                               data-frame_1="st:2290;sp:1000;"
                               data-frame_999="o:0;st:w;"
-                              data-frame_hover="c:#0c0920;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
+                              data-frame_hover="c:#000;bgc:#fff;bor:0px,0px,0px,0px;bri:120%;"
                               style="z-index:8;background-color:#ffffff;font-family:'Orbitron';text-transform:uppercase;"
                            ><span>Empezar</span> 
                            </a><!--
@@ -262,7 +262,7 @@
                            --><rs-layer
                               id="slider-1-slide-5-layer-15" 
                               data-type="text"
-                              data-color="#0c0920"
+                              data-color="#000"
                               data-bsh="c:rgba(0,0,0,0.5);"
                               data-rsp_ch="on"
                               data-xy="xo:500px,367px,256px,35px;yo:368px,240px,214px,182px;"
@@ -429,7 +429,7 @@
                               <div class="swiper-slide">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-01.jpg" class="img-fluid" alt="https://uppsala.ar/">
+                                       <img src="images/uppsala/1.png" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -437,7 +437,7 @@
                               <div class="swiper-slide">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-02.jpg" class="img-fluid" alt="https://uppsala.ar/">
+                                       <img src="images/uppsala/2.png" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -445,7 +445,7 @@
                               <div class="swiper-slide swiper-slide-prev">
                                  <div class="pbmit-featured-img-wrapper">
                                     <div class="pbmit-featured-wrapper">
-                                       <img src="images/demo2/project/project-img-04.jpg" class="img-fluid" alt="https://uppsala.ar/">
+                                       <img src="images/uppsala/3.png" class="img-fluid" alt="https://uppsala.ar/">
                                     </div>
                                  </div>
                                  <div class="swiper-slide-shadow"></div>
@@ -472,7 +472,7 @@
                         <div class="pbmit-element-posts-wrapper ">
                            <div class="pbmit-marquee-text-wraper col-md-6">
                               <div class="pbmit-marquee-img">
-                                 <img src="images/marquee-text.jpg" class="img-fluid" alt="Marquee-img"> 
+                                 <img src="images/uppsala/tuvidaessalud.png" class="img-fluid" alt="Marquee-img"> 
                               </div>
                               <div class="pbmit-tag-wrapper pbmit-front-text">
                                  <div class="pbmit-marquee-position">
@@ -680,7 +680,7 @@
                                  <div class="pbminfotech-box-content d-flex align-items-center">
                                     <div class="pbminfotech-box-content-inner">
                                        <h3 class="pbmit-team-title">
-                                          <a href="descendant.html">Rocinredes</a>
+                                          <a href="descendant.html">Rochinredes</a>
                                        </h3>
                                        <div class="pbmit-featured-wrapper pbmit-hover-img">
                                           <div class="pbmit-featured-img-wrapper">
@@ -690,48 +690,6 @@
                                           </div>
                                        </div>
                                        <div class="pbminfotech-team-tran-thumb bg-img_three">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </article>
-                           <article class="pbmit-team-style-2">
-                              <div class="pbminfotech-post-item">
-                                 <div class="pbminfotech-box-content d-flex align-items-center">
-                                    <div class="pbminfotech-box-content-inner">
-                                       <h3 class="pbmit-team-title">
-                                          <a href="descendant.html">Nico</a>
-                                       </h3>
-                                       <div class="pbmit-featured-wrapper pbmit-hover-img">
-                                          <div class="pbmit-featured-img-wrapper">
-                                             <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-04.jpg" class="img-fluid" alt="https://uppsala.ar/">
-                                             </div>
-                                          </div>
-                                       </div>
-                                       <div class="pbminfotech-team-tran-thumb bg-img_four">
-                                          <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </article>
-                           <article class="pbmit-team-style-2">
-                              <div class="pbminfotech-post-item">
-                                 <div class="pbminfotech-box-content d-flex align-items-center">
-                                    <div class="pbminfotech-box-content-inner">
-                                       <h3 class="pbmit-team-title">
-                                          <a href="descendant.html">Fraga</a>
-                                       </h3>
-                                       <div class="pbmit-featured-wrapper pbmit-hover-img">
-                                          <div class="pbmit-featured-img-wrapper">
-                                             <div class="pbmit-featured-wrapper">
-                                                <img src="images/demo2/team/team-05.jpg" class="img-fluid" alt="https://uppsala.ar/">
-                                             </div>
-                                          </div>
-                                       </div>
-                                       <div class="pbminfotech-team-tran-thumb bg-img_five">
                                           <img src="images/demo2/team/team-thumb-transparent.png" alt="https://uppsala.ar/">
                                        </div>
                                     </div>
